scrolling fix on mobile, updated responsiveness

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,8 +10,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 600px;
+  position:fixed;
   overflow-y: hidden;
   overflow-x: hidden;
+  -webkit-overflow-y: hidden;
+  -webkit-overflow-x: hidden;
   color: #222222
 }
 
